# World_Instance

./: .editorconfig  .env.local.example  .env.production.example  .gitignore  AGENTS.md  MANIFEST.md  README.md  package-lock.json  package.json
.codex/: config.example.toml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  build.gradle
apps/web/: .dockerignore  (+8 more)
docs/: 00_START_HERE.md  01_PRD.md  02_ARCHITECTURE.md  03_DOMAIN_MODEL.md  04_GENERATION_ENGINE_SPEC.md  05_FRONTEND_SPEC.md  06_SPRING_API_SPEC.md  07_DATABASE_SCHEMA_POSTGRES.md  08_WASM_INTERFACE.md  09_IMPLEMENTATION_ROADMAP.md  10_CODING_STANDARDS.md  11_TESTING_STRATEGY.md  12_CODEX_PROMPTS.md  13_ADR_INDEX.md  14_MVP_SCOPE.md  15_BACKLOG.md  16_RISK_REGISTER.md  17_WORLD_INSTANCE_SPEC.md  18_ELASTICSEARCH_SEARCH_SPEC.md  20_MANUAL_TEST_CHECKLIST.md  21_DEPLOYMENT_GUIDE.md  22_E2E_VALIDATION_CHECKLIST.md  23_DEPLOYMENT_GUIDE.md  24_PORTFOLIO_CASE_STUDY.md  99_CODEX_USAGE.md
engine/wasm-engine/: CMakeLists.txt  README.md
engine/wasm-engine/include/world_forge/: engine.hpp
engine/wasm-engine/scripts/: build-wasm.ps1  build-wasm.sh
engine/wasm-engine/src/: engine.cpp
engine/wasm-engine/ts/: package.json  tsconfig.json  vitest.config.ts
engine/wasm-engine/ts/src/: devReferenceModule.ts  engine.ts  index.ts  types.ts
engine/wasm-engine/ts/tests/: engine.test.ts
infra/: docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
scripts/: reindex-search.ps1  reindex-search.sh  run-gradle.mjs  run-wasm-build.mjs  smoke-test-api.ps1  smoke-test-api.sh
(+141 files in other folders)
